# big-d

./: .gitignore  AGENTS.md  BRAINSTORM.md  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
.claude/commands/: big-d-plan.md
academy/: README.md  agent-setup.md  package.json
agent-pack/: SKILL.md
evals/: package-lock.json  package.json
hackathon/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  wrangler.jsonc
headwaters/: CLAUDE.md  README.md  agent-setup.md  package.json
http-reference-station/: CLAUDE.md  README.md  package-lock.json  package.json
intent-space/: .env.example  CLAUDE.md  INTENT-SPACE.md  README.md  package-lock.json  package.json
itp/: CLAUDE.md  package-lock.json  package.json
loop/: .env.example  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
observatory/: README.md  package.json
promise-runtime/: README.md  package.json  tsconfig.json
scripts/: test-loop.sh
spacebase1/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
spaced/: README.md  pyproject.toml
spaced/src/spaced/: __init__.py  cli.py
tcp-reference-station/: CLAUDE.md  README.md  package-lock.json  package.json
todos/: 001-complete-p1-internet-intent-space-station-foundation.md  002-complete-p1-station-tutor-and-registration-flow.md  003-complete-p1-registration-bypass-in-tutorial-space.md  004-complete-p2-unbounded-tutor-session-state.md  005-complete-p1-dojo-agent-evaluation-harness.md  006-complete-p1-clean-up-tutor-ritual-noise.md  (+5 more)
(+380 files in other folders)
