[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spaced"
version = "0.1.0"
description = "Companion daemon for reliable intent-space participation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
spaced = "spaced.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
